# exa-integritas

./: pyproject.toml
examen/: db.sqlite3
examen/core/: forms.py  models.py  serializers.py  urls.py  views.py
examen/core/migrations/: 0001_initial.py  0002_personwithhobbie.py  0003_pdfdocument.py
examen/core/services/: external_service.py  pdf_utils.py
examen/examen/: settings.py  urls.py
examen/templates/core/: external_data.html  index.html  pdf_list.html  person_confirm_delete.html  person_form.html  person_list.html
