[tool.poetry]
name = "examen"
version = "0.1.0"
description = "examen integritas"
authors = ["fl4r30n <flareon_rojo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
